enabled package generation

--- a/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
+++ b/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/jonashouben/AsyncBinaryExtensions</RepositoryUrl>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
