--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --verbosity normal
     - name: Publish
-      run: dotnet nuget push ./AsyncBinaryExtensions/bin/Release/*.nupkg -k "${{secrets.NUGET}}" --skip-duplicate
+      run: dotnet nuget push ./AsyncBinaryExtensions/bin/Release/*.nupkg -k "${{secrets.NUGET}}" --skip-duplicate -s https://api.nuget.org/v3/index.json
