--- a/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
+++ b/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/jonashouben/AsyncBinaryExtensions</RepositoryUrl>
-    <Version>1.0.0</Version>
+    <Version>1.0.0.1</Version>
+    <Description>C# Library for reading various datatypes from a stream asynchronously</Description>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' != 'netstandard2.1'">
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 
