--- a/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
+++ b/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
@@ -7,6 +7,8 @@
     <RepositoryUrl>https://github.com/jonashouben/AsyncBinaryExtensions</RepositoryUrl>
     <Version>1.0.0.1</Version>
     <Description>C# Library for reading various datatypes from a stream asynchronously</Description>
+    <Authors>Jonas Houben</Authors>
+    <Company />
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' != 'netstandard2.1'">
