--- a/AsyncBinaryExtensions.Test/AsyncBinaryExtensions.Test.csproj
+++ b/AsyncBinaryExtensions.Test/AsyncBinaryExtensions.Test.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
+		<Nullable>enable</Nullable>
+		<WarningsAsErrors>nullable</WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
