--- a/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
+++ b/AsyncBinaryExtensions/AsyncBinaryExtensions.csproj
@@ -9,7 +9,10 @@
 		<Description>C# Library for reading various datatypes from a stream asynchronously</Description>
 		<Authors>Jonas Houben</Authors>
 		<Company />
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
+		<WarningsAsErrors>nullable</WarningsAsErrors>
+		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' != 'netstandard2.1'">
